Bug 268524 mozilla is unusable in solaris x86 using Sun SOS10 compiler. patch maker=leon.sha@sun.com r=darin sr=henry.jia